syntax = "proto3";

package user;

service UsersService {
  rpc FindOneBy (UserFindOneBy) returns (UserFindOneByResponse) {}
  rpc CreateOne (UserCreateOne) returns (UserCreateOneResponse) {}
}

message UserFindOneByData {
  string email = 1;
}

message UserFindOneBy {
  UserFindOneByData data = 1;
  LogEvent logEvent = 2;
}

message UserCreateOneData {
  string email = 1;
  string name = 2;
  string password = 3;
}

message UserCreateOne {
  UserCreateOneData data = 1;
  LogEvent logEvent = 2;
}

message UserFindOneByResponse {
  string id = 1;
  string email = 2;
  string name = 3;
  string password = 4;
}

message UserCreateOneResponse {
  string id = 1;
  string email = 2;
  string name = 3;
}

message LogEventContext {
  string ip = 1;
  string method = 2;
  string path = 3;
  string userAgent = 4;
  string correlationId = 5;
}

message LogEvent {
  string operation = 1;
  LogEventContext context = 2;
}
  
